Archive2/9f/8c663564db3182/output
main.cpp: In function 'int main()':
main.cpp:20:11: error: use of deleted function 'D1::D1(int)'
     D1 d(5);
           ^
main.cpp:15:17: note: 'D1::D1(int)' is implicitly deleted because the default definition would be ill-formed:
     using Base::Base;
                 ^
main.cpp:15:17: error: use of deleted function 'Base::Base()'
main.cpp:6:5: note: declared here
     Base() = delete;
     ^
